[gd_scene load_steps=4 format=3 uid="uid://ctqae8e73sa1w"]

[ext_resource type="Script" uid="uid://di3q0dlg8qa27" path="res://level.gd" id="1_f2txt"]
[ext_resource type="PackedScene" uid="uid://dch0wy1f03eim" path="res://environment.tscn" id="2_28khi"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://src/player.tscn" id="3_i1mur"]

[node name="level" type="Node3D"]
script = ExtResource("1_f2txt")

[node name="Player" parent="." instance=ExtResource("3_i1mur")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25787, 0)

[node name="Sun" parent="." instance=ExtResource("2_28khi")]
transform = Transform3D(0.946325, -0.273407, 0.172389, 0.0261095, 0.596274, 0.802356, -0.322161, -0.754789, 0.571407, 0, 10, 0)

[connection signal="add_block" from="Player" to="." method="add_block_at_world_offset"]
[connection signal="remove_block" from="Player" to="." method="remove_block_at_world_offset"]
[connection signal="reset_position" from="Player" to="." method="_on_player_reset_position"]
